--- a/css/diceGame.css
+++ b/css/diceGame.css
@@ -42,6 +42,11 @@ img{
     margin-right: 10px;
 }
 
+ul{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 #copyRightSignature {
     color: #ffffff;
     padding: 15px;
